[package]
name = "projx"
version = "0.1.0"
authors = ["Odin Dutton <odindutton@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

description = "A simple clone/jump to project CLI tool for GitHub and GitLab"
license = "MIT OR Apache-2.0"
repository = "https://github.com/twe4ked/projx"

[dependencies]
url = "2.2.2"
